--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -18,7 +18,11 @@ jobs:
       - uses: actions/setup-python@v2
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==1.10.0 twine virtualenv numpy cython
+        env: 
+            CIBW_BUILD: 'cp38-* cp39-* cp310-*'
+            CIBW_SKIP: 'pp* *686* *-musllinux_*'
+              
+        run: python -m pip install cibuildwheel twine virtualenv numpy cython
 
       - name: Build wheels
         run: |
