--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -18,9 +18,6 @@ jobs:
       - uses: actions/setup-python@v2
 
       - name: Install cibuildwheel
-        env: 
-            CIBW_BUILD: 'cp38-* cp39-* cp310-*'
-            CIBW_SKIP: 'pp* *686* *-musllinux_*'
               
         run: python -m pip install cibuildwheel twine virtualenv numpy cython
 
@@ -29,6 +26,10 @@ jobs:
         run: |
             sudo apt-get install libasound2-dev libjack-jackd2-dev
       - name: Build wheels
+        env:
+            CIBW_BUILD: 'cp38-* cp39-* cp310-*'
+            CIBW_SKIP: 'pp* *686* *-musllinux_*'
+            CIBW_BEFORE_ALL_LINUX: yum install -y alsa-lib-devel jack-audio-connection-kit-devel
         run: |
             # python setup.py build_ext
             python -m cibuildwheel --output-dir wheelhouse
