--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macOS-latest, windows-latest, ubuntu-20.04]
+        os: [macOS-latest, windows-latest]
         # os: [windows-2019]
         # os: [ubuntu-20.04, windows-2019, macOS-10.15]
     steps:
@@ -21,10 +21,6 @@ jobs:
               
         run: python -m pip install cibuildwheel twine virtualenv numpy cython
 
-      - name: Install libraries linux
-        if: runner.os == 'linux'
-        run: |
-            sudo apt-get install libasound2-dev libjack-jackd2-dev
       - name: Build wheels
         env:
             CIBW_BUILD: 'cp38-* cp39-* cp310-*'
