--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -25,6 +25,7 @@ jobs:
         env:
             CIBW_BUILD: 'cp39-* cp310-* cp311-*'
             CIBW_SKIP: 'pp* *686* *-musllinux_*'
+            CIBW_ARCHS_MACOS: 'x86_64 arm64'
             CIBW_BEFORE_ALL_LINUX: yum install -y alsa-lib-devel jack-audio-connection-kit-devel
         run: |
             # python setup.py build_ext
