--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -17,8 +17,12 @@ version: 2
 
 version: 2
 
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.10"
+
 python:
-  version: 3.10
   install:
     - requirements: docs/requirements.txt
 
