--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: Build wheels
         env:
-            CIBW_BUILD: 'cp39-* cp310-* cp311-* cp312-*'
-            CIBW_SKIP: 'pp* *686* *-musllinux_*'
+            CIBW_BUILD: 'cp39-* cp310-* cp311-* cp312-* cp313-*'
+            CIBW_SKIP: 'pp* *686*'
             CIBW_ARCHS_MACOS: 'x86_64 arm64'
             CIBW_BEFORE_ALL_LINUX: yum install -y alsa-lib-devel jack-audio-connection-kit-devel
         run: |
